--- a/组件的过渡.md
+++ b/组件的过渡.md
@@ -26,9 +26,9 @@ new Vue({
   opacity: 0
 }
 ```
--  <transition>中只有name属性，不可添加其他标签属性  
--  <transition>中只能有一个子元素并且该子元素需要有v-show或者v-if来控制是否显示  
--  <transition>中的name属性用于 替换 vue钩子函数中的类名
+-  `<transition>`中只有name属性，不可添加其他标签属性 
+-  `<transition>`中只能有一个子元素并且该子元素需要有v-show或者v-if来控制是否显示  
+-  `<transition>`中的name属性用于 替换 vue钩子函数中的类名
 -  v-enter: 定义进入过渡的开始状态。在元素被插入时生效，在下一个帧移除。
 -  v-enter-active: 定义进入过渡的结束状态。在元素被插入时生效，在transition/animation完成之后移除。
 -  v-leave:定义离开过渡的开始状态。在离开过渡被触发时生效，在下一个帧移除。
